fix: 드롭다운 fixed 변경, z-index 추가

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,9 @@
 }
 
 @layer utilities {
+  .transition-width {
+    transition-property: width;
+  }
 }
 
 @layer components {
